✨ feat: 添加网易云 shortcode

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://chuenwei0129.github.io/blog/"
 languageCode = "en-us"
-googleAnalytics = "G-XYFD95KB4J"
+googleAnalytics = "G-FF2GJ40CQT"
 relativeURLs = false
 disablePathToLower = true
 ignoreFiles = [
