✨ feat: 测试发布时间

--- a/data/config.yaml
+++ b/data/config.yaml
@@ -9,15 +9,13 @@ enableCallouts: true
 enableSPA: true
 enableFooter: true
 enableContextualBacklinks: true
-enableRecentNotes: false
+enableRecentNotes: true
 enableGitHubEdit: true
 GitHubLink: https://github.com/chuenwei0129/blog/tree/hugo/content
 enableSemanticSearch: false
 operandApiKey: "REPLACE-WITH-YOUR-OPERAND-API-KEY"
-description:
-  Host your second brain and digital garden for free. Quartz features extremely fast full-text search,
-  Wikilink support, backlinks, local graph, tags, and link previews.
-page_title: "placeholder"
+description: My personal knowledge base.
+page_title: "🚀 My PKM"
 links:
   - link_name: Twitter
     link: https://twitter.com/chuenwei0129
